<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.48"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <Button
                    android:id="@+id/traducir"
                    android:layout_width="149dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/btnTraducir" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="218dp"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/lblNombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lblNombre" />

                <EditText
                    android:id="@+id/txtNombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/txtNombre"
                    android:inputType="textPersonName|textCapWords" />

                <TextView
                    android:id="@+id/lblApellidos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lblApellidos" />

                <EditText
                    android:id="@+id/txtApellidos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/lblApellidos"
                    android:inputType="textPersonName|textCapWords" />

                <TextView
                    android:id="@+id/lblEdad"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lblEdad" />

                <EditText
                    android:id="@+id/txtEdad"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/txtEdad"
                    android:inputType="number"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="142dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/lblGenero"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lblGenero" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/rdHombre"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/rdHombre" />

                    <RadioButton
                        android:id="@+id/rdMujer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/rdMujer" />

                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/lblEstadoCivil"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lblEstadoCivil" />

                <Spinner
                    android:id="@+id/spinnerEstadoCivil"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="51dp"
                android:orientation="vertical">

                <Switch
                    android:id="@+id/switchHijos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/switchHijos" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnAceptar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/btnEnviar" />

                <Button
                    android:id="@+id/btnLimpiar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/btnLimpiar" />
            </LinearLayout>

            <TextView
                android:id="@+id/resultado"
                android:layout_width="match_parent"
                android:layout_height="79dp" />



        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>

